--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -7,13 +7,14 @@
   },
   "main": "src/server.ts",
   "scripts": {
-    "start": "node ./www/server.js",
+    "start": "node server.js",
     "tsc": "npx tsc",
-    "dev": "npx ts-node-dev --respawn --transpile-only ./src/server.ts",
-    "prod": "npx tsc && node ./www/server.js",
+    "dev": "npx ts-node-dev --respawn --transpileOnly ./src/server.ts",
+    "prod": "npx tsc && node server.js",
     "clean": "rm -rf www/ || true",
-    "deploy": "npm run build && eb list && eb use udagram-api-dev && eb deploy",
+    "deploy": "npm run build && eb list && eb use udagram-api-dev && eb deploy && eb setenv DB_PORT=$DB_PORT POSTGRES_HOST=$POSTGRES_HOST POSTGRES_USERNAME=$POSTGRES_USERNAME POSTGRES_DB=$POSTGRES_DB  POSTGRES_PASSWORD=$POSTGRES_PASSWORD PORT=8080 AWS_REGION=$AWS_REGION AWS_PROFILE=$AWS_PROFILE AWS_BUCKET=$AWS_BUCKET URL=$URL JWT_SECRET=$JWT_SECRET",
     "build": "npm install . && npm run clean && tsc && cp -rf src/config www/config && cp -R .elasticbeanstalk www/.elasticbeanstalk && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && zip -r Archive.zip . && cd ..",
+    "build:windows": "npm install . && npm run clean && tsc && cp -rf src/config www/config && cp -R .elasticbeanstalk www/.elasticbeanstalk && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && bestzip Archive.zip . && cd ..",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -39,16 +40,23 @@
     "@types/bluebird": "^3.5.26",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.16.1",
+    "@types/jasmine": "^4.0.3",
     "@types/node": "^11.11.6",
     "@types/sequelize": "^4.27.44",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^10.9.0",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
+    "bestzip": "^2.2.1",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
+    "jasmine": "^4.3.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "jasmine-ts": "^0.4.0",
     "mocha": "^6.1.4",
+    "supertest": "^6.2.4",
     "ts-node-dev": "^1.0.0-pre.32",
     "typescript": "^3.9.10"
   }
